# Kin

./: .dockerignore  .env.example  .gitignore  .mcp.json  CODE-ASSESSMENT.md  COMMIT_MSG.tmp  CONTRIBUTING.md  Dockerfile  README.md  _start.ts  _tmp_ls.mjs  commitmsg.txt  deploy-easy.bat  deploy-easy.sh  docker-compose.coolify.yml  docker-compose.fleet.yml  docker-compose.yml  fleet.db  fly.toml  package-lock.json  package.json  push-s02-to-github.bat  push-to-github.bat  push.bat  push.sh  query-m002-sc.cjs  query-m002.cjs  railway.toml  render.yaml  run-tests.js  setup.bat  setup.sh  test_temp.js  tmp_verify_s05.py  tmp_verify_s06.py  tmp_verify_s07.py  tmp_verify_s08.py  tsconfig.json  vitest.config.ts
.artifacts/: home.html
.gsd.migrating/: DECISIONS.md  STATE.md  event-log.jsonl  gsd.db-shm  gsd.db-wal  state-manifest.json
admin/: dashboard.html
api/: openapi.json  sentry.ts  server.ts
bot/: discord-bot.ts  telegram-bot.ts  whatsapp-bot.ts
brain-fund/: INSTALL_GSD.md  INSTALL_NOW.bat  RUN_INSTALLER.bat  check-ftp-folders.ps1  deploy-ftp.mjs  install-gsd-direct.bat  install-gsd-download.ps1  install-gsd.bat  install-gsd.ps1  package-lock.json  package.json  skills-lock.json  upload-ftp-full.ps1  upload-htaccess.ps1
companions/: aether.md  catalyst.md  cipher.md  config.ts  forge.md  mischief.md  vortex.md
config/: drift-detection.json  health_monitor.yaml  kin-processes.json  solana-devnet.json  subscription.json  support.json  tailscale.json  tiers.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
(+850 files in other folders)
